--- a/example-projects/up-down-stepped/6-log.html
+++ b/example-projects/up-down-stepped/6-log.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <!-- inspect/debug in new tab to inspect the entire project -->
+  <!-- inspect/debug in new tab to access the log -->
   <meta charset='utf-8'>
   <title>Up, Down</title>
   <style>
