--- a/week-1/index.html
+++ b/week-1/index.html
@@ -90,9 +90,10 @@
           <h3>Isolating JavaScript</h3>
           <br>
           <ul>
-            <li>Array Methods</li>
-            <li><code>Object.</code> methods</li>
+            <li>Reference vs. Value</li>
             <li>Side Effects</li>
+            <li>Higher-Order Functions</li>
+            <li>Array Methods</li>
           </ul>
         </section>
       </section>
@@ -208,8 +209,99 @@
         <p>Arrays, Objects, Side Effects</p>
       </section>
 
-      <section>
+      <section id='reference-vs-value'>
+        <section>
+          <h2><code>Reference vs. Value</code></h2>
+          <br>
+          <p>How objects & arrays are stored</p>
+        </section>
+        <section id='reference-value-code'>
+          <script>
+            codeAlong({
+              title: 'Reference vs Value',
+              container: 'reference-value-code',
+              type: 'js',
+              source: [
+                {
+                  name: 'Sharing a Reference',
+                  path: '../javascripting/reference-vs-value/sharing-a-reference.js',
+                },
+                {
+                  name: 'Comparing',
+                  path: '../javascripting/reference-vs-value/comparing.js',
+                },
+                {
+                  name: 'Array Challenges',
+                  path: '../javascripting/reference-vs-value/array-challenges.js',
+                },
+                {
+                  name: 'Object Challenges',
+                  path: '../javascripting/reference-vs-value/object-challenges.js',
+                },
+              ]
+            })
+          </script>
+        </section>
+        <section>
+          <h3>Helpful Links</h3>
+          <p>Reference vs. Values</p>
+          <br>
+          <ul>
+            <li><a
+                href='https://codeburst.io/javascript-passing-by-value-vs-reference-explained-in-plain-english-8d00fd06a47c'
+                target='_blank'>codeburst (article) </a></li>
+            <li><a href='https://www.youtube.com/watch?v=fD0t_DKREbE' target='_blank'>Code with Mosh (video)</a></li>
+          </ul>
+        </section>
+      </section>
 
+      <section id='side-effects'>
+        <section>
+          <h2><code>Side Effects</code></h2>
+          <br>
+          <p>when functions change global scope</p>
+        </section>
+        <section id='side-effects-code'>
+          <script>
+            codeAlong({
+              title: 'Side Effects',
+              container: 'side-effects-code',
+              type: 'js',
+              source: [
+                {
+                  name: 'What are they?',
+                  path: '../javascripting/side-effects/what-are-they.js',
+                },
+                {
+                  name: 'Copying Arrays & Objects',
+                  path: '../javascripting/side-effects/copying-arrays-and-objects.js',
+                },
+                {
+                  name: 'Avoiding Side Effects',
+                  path: '../javascripting/side-effects/avoiding-side-effects.js',
+                },
+                {
+                  name: 'Challenges',
+                  path: '../javascripting/side-effects/challenges.js',
+                },
+              ]
+            })
+          </script>
+        </section>
+        <section>
+          <h3>Helpful Links</h3>
+          <p>Side Effects</p>
+          <br>
+          <ul></ul>
+        </section>
+      </section>
+
+      <section>
+        <li>Higher-Order Functions</li>
+      </section>
+
+      <section>
+        <li>Array Methods</li>
       </section>
 
       <section id='homework-launch'>
