dom examples, variabling exercises

--- a/week-1/index.html
+++ b/week-1/index.html
@@ -218,7 +218,7 @@
         <section id='reference-value-code'>
           <script>
             codeAlong({
-              title: 'Reference vs Value',
+              title: 'Intro: Reference vs Value',
               container: 'reference-value-code',
               type: 'js',
               source: [
@@ -230,13 +230,32 @@
                   name: 'Comparing',
                   path: '../javascripting/reference-vs-value/comparing.js',
                 },
+              ]
+            })
+          </script>
+        </section>
+        <section id='reference-value-challenges'>
+          <script>
+            codeAlong({
+              title: 'Challenges: Reference vs Value',
+              container: 'reference-value-challenges',
+              type: 'js',
+              source: [
                 {
-                  name: 'Array Challenges',
-                  path: '../javascripting/reference-vs-value/array-challenges.js',
+                  name: 'Array (1)',
+                  path: '../javascripting/reference-vs-value/challenges/array-1.js',
                 },
                 {
-                  name: 'Object Challenges',
-                  path: '../javascripting/reference-vs-value/object-challenges.js',
+                  name: 'Array (2)',
+                  path: '../javascripting/reference-vs-value/challenges/array-2.js',
+                },
+                {
+                  name: 'Object (1)',
+                  path: '../javascripting/reference-vs-value/challenges/object-1.js',
+                },
+                {
+                  name: 'Object (2)',
+                  path: '../javascripting/reference-vs-value/challenges/object-2.js',
                 },
               ]
             })
@@ -304,6 +323,79 @@
         <li>Array Methods</li>
       </section>
 
+      <section id='integrating-javascript'>
+        <h1>Integrating JavaScript</h1>
+        <br>
+        <p>Arrays, Objects, Side Effects</p>
+      </section>
+
+      <section id='dom-manipulation'>
+        <section>
+          <h2><code>DOM Manipulation</code></h2>
+          <br>
+          <p>Changing the DOM with JavaScript</p>
+        </section>
+        <section id='dom-create'>
+          <script>
+            codeAlong({
+              title: 'DOM Manipulation: Create Elements',
+              container: 'dom-create',
+              type: 'document',
+              source: [
+                {
+                  name: 'header',
+                  path: '../dom-manipulation/create-elements/header.html',
+                },
+                {
+                  name: 'link',
+                  path: '../dom-manipulation/create-elements/link.html',
+                },
+                {
+                  name: 'details & summary',
+                  path: '../dom-manipulation/create-elements/details-summary.html',
+                },
+              ]
+            })
+          </script>
+        </section>
+        <section id='dom-update'>
+          <script>
+            codeAlong({
+              title: 'DOM Manipulation: Update Elements',
+              container: 'dom-update',
+              type: 'document',
+              source: [
+                {
+                  name: 'bad link',
+                  path: '../dom-manipulation/update-elements/bad-link.html',
+                },
+                {
+                  name: 'nested child',
+                  path: '../dom-manipulation/update-elements/nested-child.html',
+                },
+                {
+                  name: 'list item',
+                  path: '../dom-manipulation/update-elements/list-item.html',
+                },
+                {
+                  name: 'remove a child',
+                  path: '../dom-manipulation/update-elements/remove-a-child.html',
+                },
+                {
+                  name: 'ul -> ol',
+                  path: '../dom-manipulation/update-elements/ul-to-ol.html',
+                },
+              ]
+            })
+          </script>
+        </section>
+        <section>
+          <h3>Helpful Links</h3>
+          <p>Side Effects</p>
+          <br>
+          <ul></ul>
+        </section>
+      </section>
       <section id='homework-launch'>
         <section>
           <h2>Homework Launch</h2>
