--- a/example-projects/up-down-stepped/4-listeners.html
+++ b/example-projects/up-down-stepped/4-listeners.html
@@ -33,11 +33,11 @@
   <script id='listeners'>
     document.getElementById('plus-one')
       .addEventListener('click', function up() {
-        console.log('up was clicked');
+        console.log('+ was clicked');
       });
     document.getElementById('minus-one')
       .addEventListener('click', function down() {
-        console.log('down was clicked');
+        console.log('- was clicked');
       });
   </script>
 </body>
