--- a/example-projects/up-down-stepped/1-data-and-log.html
+++ b/example-projects/up-down-stepped/1-data-and-log.html
@@ -5,8 +5,15 @@
   <meta charset='utf-8'>
   <title>Up, Down</title>
   <style></style>
-  <script id='state'></script>
-  <script id='log'></script>
+  <script id='data'>
+    const numbers = {
+      current: 0,
+      past: []
+    }
+  </script>
+  <script id='log'>
+    const log = [];
+  </script>
   <script id='init'></script>
 </head>
 
