refactor-example-projects

--- a/example-projects/average-separated/index.html
+++ b/example-projects/average-separated/index.html
@@ -6,9 +6,15 @@
   <title>Up, Down</title>
   <link rel="stylesheet" href="./style.css">
   <script src='./data/measurements.js'></script>
-  <script src='./logic/average.js'></script>
   <script src='./log.js'></script>
   <script src='./init.js'></script>
+
+  <script src='./logic/average.js'></script>
+
+  <script src='./handlers/add.js'></script>
+  <script src='./handlers/reset.js'></script>
+  <script src='./handlers/close.js'></script>
+  <script src='./handlers/open.js'></script>
 </head>
 
 <body>
@@ -24,9 +30,9 @@
     <button id='reset-button'>reset measurements</button>
   </section>
 
-  <script src='./user-stories/add-measurement.js'></script>
-  <script src='./user-stories/close-measurements.js'></script>
-  <script src='./user-stories/reset-measurements.js'></script>
+  <script src='./listeners/add.js'></script>
+  <script src='./listeners/reset.js'></script>
+  <script src='./listeners/close.js'></script>
 </body>
 
 </html>
