--- a/example-projects/tic-tac-toe-separated/index.html
+++ b/example-projects/tic-tac-toe-separated/index.html
@@ -7,8 +7,12 @@
   <link rel="stylesheet" href="./style.css">
   <script src='./data/game.js'></script>
   <script src='./log.js'></script>
-  <script src='./logic/play.js'></script>
   <script src='./init.js'></script>
+
+  <script src='./logic/play.js'></script>
+
+  <script src='./handlers/place-move.js'></script>
+  <script src='./handlers/reset-game.js'></script>
 </head>
 
 <body>
@@ -35,8 +39,8 @@
     <button id='reset'>reset board</button>
   </section>
 
-  <script src='./user-stories/place-move.js'></script>
-  <script src='./user-stories/reset-game.js'></script>
+  <script src='./listeners/place-move.js'></script>
+  <script src='./listeners/reset-game.js'></script>
 </body>
 
 </html>
