--- a/example-projects/up-down-stepped/1-data-and-log.html
+++ b/example-projects/up-down-stepped/1-data-and-log.html
@@ -15,12 +15,13 @@
     const log = [];
   </script>
   <script id='init'></script>
+  <script id='handlers'></script>
 </head>
 
 <body>
   <section id='user-interface'></section>
 
-  <script id='stories'></script>
+  <script id='listeners'></script>
 </body>
 
 </html>
