--- a/example-projects/up-down-stepped/2-initialize.html
+++ b/example-projects/up-down-stepped/2-initialize.html
@@ -30,6 +30,7 @@
       document.getElementById('current-number').innerHTML = numbers.current;
     }
   </script>
+  <script id='handlers'></script>
 </head>
 
 <body>
@@ -37,7 +38,7 @@
     <code id='current-number'></code>
   </section>
 
-  <script id='stories'></script>
+  <script id='listeners'></script>
 </body>
 
 </html>
