--- a/example-projects/up-down-stepped/5-story-reset.html
+++ b/example-projects/up-down-stepped/5-story-reset.html
@@ -28,6 +28,38 @@
       document.getElementById('current-number').innerHTML = numbers.current;
     }
   </script>
+  <script id='handlers'>
+    function up() {
+      debugger;
+      numbers.past.push(numbers.current);
+      numbers.current += 1;
+      document.getElementById('current-number').innerHTML = numbers.current;
+      log.push({
+        userStory: 'up',
+        numbers: JSON.parse(JSON.stringify(numbers))
+      });
+    }
+    function down() {
+      debugger;
+      numbers.past.push(numbers.current);
+      numbers.current -= 1;
+      document.getElementById('current-number').innerHTML = numbers.current;
+      log.push({
+        userStory: 'down',
+        numbers: JSON.parse(JSON.stringify(numbers))
+      });
+    }
+    function resetHandler() {
+      debugger;
+      numbers.current = 0;
+      numbers.past = [];
+      document.getElementById('current-number').innerHTML = numbers.current;
+      log.push({
+        userStory: 'reset',
+        numbers: JSON.parse(JSON.stringify(numbers))
+      })
+    }
+  </script>
 </head>
 
 <body>
@@ -39,43 +71,9 @@
     <button id='reset'>reset</button>
   </section>
 
-  <script id='stories'>
-    function up() {
-      numbers.past.push(numbers.current);
-      numbers.current += 1;
-      document.getElementById('current-number').innerHTML = numbers.current;
-      log.push({
-        userStory: 'up',
-        numbers: JSON.parse(JSON.stringify(numbers))
-      });
-    }
+  <script id='listeners'>
     document.getElementById('plus-one').addEventListener('click', up);
-
-    function down() {
-      numbers.past.push(numbers.current);
-      numbers.current -= 1;
-      document.getElementById('current-number').innerHTML = numbers.current;
-      log.push({
-        userStory: 'down',
-        numbers: JSON.parse(JSON.stringify(numbers))
-      });
-    }
     document.getElementById('minus-one').addEventListener('click', down);
-
-    function resetHandler() {
-      // resetting state
-      numbers.current = 0;
-      numbers.past = [];
-
-      // rerender UI based on state
-      document.getElementById('current-number').innerHTML = numbers.current;
-
-      // log user interaction
-      log.push({
-        userStory: 'reset',
-        numbers: JSON.parse(JSON.stringify(numbers))
-      })
-    }
     document.getElementById('reset').addEventListener('click', resetHandler);
   </script>
 </body>
