--- a/example-projects/up-down-stepped/0-setup.html
+++ b/example-projects/up-down-stepped/0-setup.html
@@ -8,12 +8,13 @@
   <script id='state'></script>
   <script id='log'></script>
   <script id='init'></script>
+  <script id='handlers'></script>
 </head>
 
 <body>
   <section id='user-interface'></section>
 
-  <script id='stories'></script>
+  <script id='listeners'></script>
 </body>
 
 </html>
