--- a/example-projects/up-down-stepped/3-story-up.html
+++ b/example-projects/up-down-stepped/3-story-up.html
@@ -35,7 +35,7 @@
       numbers.current += 1;
       document.getElementById('current-number').innerHTML = numbers.current;
       log.push({
-        userStory: 'up',
+        handler: 'up',
         numbers: JSON.parse(JSON.stringify(numbers))
       });
     }
