--- a/week-1/index.html
+++ b/week-1/index.html
@@ -79,6 +79,16 @@
           </p>
         </section>
         <section>
+          <h3>Isolating JavaScript</h3>
+          <br>
+          <ul>
+            <li>Reference vs. Value</li>
+            <li>Side Effects</li>
+            <li>Updating DOM Elements</li>
+            <li>Creating DOM Elements</li>
+          </ul>
+        </section>
+        <section>
           <h3>Integrating JavaScript</h3>
           <br>
           <ul>
@@ -86,16 +96,6 @@
             <li><strong>State</strong>: current data in your app</li>
             <li><strong>Log</strong>: a history of user interactions & state</li>
             <li><strong>User Stories</strong>: what users can do with your data</li>
-          </ul>
-        </section>
-        <section>
-          <h3>Isolating JavaScript</h3>
-          <br>
-          <ul>
-            <li>Reference vs. Value</li>
-            <li>Side Effects</li>
-            <li>Updating DOM Elements</li>
-            <li>Updating DOM Elements</li>
           </ul>
         </section>
       </section>
@@ -107,7 +107,7 @@
         <p>Any <code>ask-on-sunday</code> issues?</p>
         <p>Any other Questions?</p>
         <br>
-        <code>(~60 min)</code>
+        <code>(~30 min)</code>
       </section>
 
       <section id='isolating-javascript'>
