--- a/example-projects/up-down-stepped/4-story-down.html
+++ b/example-projects/up-down-stepped/4-story-down.html
@@ -35,7 +35,7 @@
       numbers.current += 1;
       document.getElementById('current-number').innerHTML = numbers.current;
       log.push({
-        userStory: 'up',
+        handler: 'up',
         numbers: JSON.parse(JSON.stringify(numbers))
       });
     }
@@ -45,7 +45,7 @@
       numbers.current -= 1;
       document.getElementById('current-number').innerHTML = numbers.current;
       log.push({
-        userStory: 'down',
+        handler: 'down',
         numbers: JSON.parse(JSON.stringify(numbers))
       });
     }
