--- a/week-1/index.html
+++ b/week-1/index.html
@@ -27,7 +27,14 @@
   <link rel="stylesheet" href="../reveal.js/css/reveal.css">
   <link rel="stylesheet" href="../reveal.js/css/theme/night.css">
 
-  <script src="../embed-scripts/beautify.js"></script>
+  <script src='../embed-scripts/beautify.js'></script>
+
+  <!-- why won't local parser-babylon work -->
+  <script src="../embed-scripts/prettier/standalone.js"></script>
+  <!-- <script src="https://unpkg.com/prettier@1.13.0/standalone.js"></script> -->
+  <!-- <script src="./prettier/parser-babylon.js"></script> -->
+  <script src="https://unpkg.com/prettier@1.13.0/parser-babylon.js"></script>
+  <!-- <script src="../embed-scripts/beautify.js"></script> -->
 
   <style>
     /* https://stackoverflow.com/questions/25479420/how-to-add-a-fixed-footer-on-all-slides */
