--- a/week-1/index.html
+++ b/week-1/index.html
@@ -1,17 +1,3 @@
-<!--
-  240 - all class
-  120 - pre break
-    30 - questions / review
-    50 - array stuff
-    40 - dom manipulation
-  20 min - break
-  100 - post break
-    10 - about state
-    80 - group projecting
-    10 - homework launch
- -->
-
-
 <!doctype html>
 <html>
 
@@ -349,7 +335,7 @@
         <p>Web pages that store data</p>
         <br>
         <br>
-        <code>(~45 min)</code>
+        <code>(~10 min)</code>
       </section>
 
       <section id='what-are-apps'>
@@ -366,7 +352,7 @@
         <section>
           <h2>User Stories</h2>
           <br>
-          <p>What users can do with your data</p>
+          <p>What users can do with your data?</p>
         </section>
         <section>
           <h2>Logs</h2>
@@ -376,24 +362,11 @@
       </section>
 
 
-      <section id='using-side-effects'>
-        <section>
-          <h2>Using Side Effects</h2>
-          <br>
-          <p>Updating State by reference</p>
-        </section>
-        <section>
-          <h3>Data</h3>
-          <br>
-          <p>handlers directly update a shared state object</p>
-        </section>
-      </section>
-
       <section id='up-down'>
         <section>
           <h2>Example Stateful Project</h2>
           <br>
-          <p>up/down</p>
+          <p>Using Side-Effects to manage state</p>
         </section>
         <section id='up-down-stepped'>
           <script>
@@ -446,7 +419,16 @@
         <section>
           <h2>In-Class Project</h2>
           <br>
-          <p>Build a stateful web page</p>
+          <p>Build a project in small groups</p>
+          <br>
+          <code>(~80 min)</code>
+        </section>
+        <section>
+          <a href='https://github.com/HackYourFutureBelgium/up-down-code-along' target='_blank'>
+            <h2>
+              Up/Down Starter Repo
+            </h2>
+          </a>
         </section>
       </section>
 
