step-through-reminder

--- a/week-1/index.html
+++ b/week-1/index.html
@@ -115,6 +115,11 @@
           <br>
           <p>How objects & arrays are stored</p>
         </section>
+        <section>
+          <h3>Very Helpful Hint</h3>
+          <br>
+          <p>Study these code-alongs in JS Tutor and the Debugger</p>
+        </section>
         <section id='reference-value-code'>
           <script>
             codeAlong({
