--- a/week-1/index.html
+++ b/week-1/index.html
@@ -97,7 +97,7 @@
         <h1>Review</h1>
         <br>
         <br>
-        <p>Any <code>ask-on-sunday</code> issues?</p>
+        <p>Any <code>sunday-review</code> issues?</p>
         <p>Any other Questions?</p>
         <br>
         <code>(~30 min)</code>
