--- a/week-1/index.html
+++ b/week-1/index.html
@@ -135,6 +135,10 @@
                   name: 'Comparing',
                   path: '../javascripting/reference-vs-value/comparing.js',
                 },
+                {
+                  name: 'const & Reference Types',
+                  path: '../javascripting/reference-vs-value/const-reference-types.js',
+                },
               ]
             })
           </script>
