--- a/example-projects/up-down-stepped/5-story-reset.html
+++ b/example-projects/up-down-stepped/5-story-reset.html
@@ -23,7 +23,7 @@
     const log = [];
   </script>
   <script id='init'>
-    window.onload = () => {
+    window.onload = function () {
       log.push({ initialNumbers: JSON.parse(JSON.stringify(numbers)) });
       document.getElementById('current-number').innerHTML = numbers.current;
     }
