--- a/example-projects/up-down-stepped/2-initialize.html
+++ b/example-projects/up-down-stepped/2-initialize.html
@@ -26,7 +26,8 @@
     window.onload = function () {
       // log initial state
       // creating a copy so the log entry does not change later with side-effects
-      log.push({ initialNumbers: JSON.parse(JSON.stringify(numbers)) });
+      const copiedState = JSON.parse(JSON.stringify(numbers));
+      log.push({ initialNumbers: copiedState });
       // render UI from initial state
       document.getElementById('current-number').innerHTML = numbers.current;
     }
