--- a/example-projects/summary-details-stepped/0-setup.html
+++ b/example-projects/summary-details-stepped/0-setup.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset='utf-8'>
-  <title>Summary & Details</title>
+  <title>Up, Down</title>
   <style></style>
   <script id='state'></script>
   <script id='log'></script>
