dom-examples-to-study

--- a/week-2/index.html
+++ b/week-2/index.html
@@ -284,6 +284,28 @@
             })
           </script>
         </section>
+        <section>
+          <h3>Helpful Links</h3>
+          <br>
+          <ul>
+            <li>
+              <a href='https://javascript.info/document' target='_blank'>
+                javascript.info/document
+              </a>
+            </li>
+            <li>
+              <a href='https://study.hackyourfuture.be/javascript/dom-manipulation' target='_blank'>
+                study.hackyourfuture.be
+              </a>
+            </li>
+            <li>
+              <a href='https://github.com/HackYourFutureBelgium/dom-manipulation/blob/master/examples-modifying-elements/README.md'
+                target='_blank'>
+                examples to study
+              </a>
+            </li>
+          </ul>
+        </section>
       </section>
 
       <section id='break'>
