--- a/week-2/index.html
+++ b/week-2/index.html
@@ -294,15 +294,15 @@
               </a>
             </li>
             <li>
+              <a href='https://dom-tutorials.appspot.com/static/index.html' target='_blank'>
+                dom-tutorials
+              </a>
+            </li>
+            <li>
               <a href='https://study.hackyourfuture.be/javascript/dom-manipulation' target='_blank'>
                 study.hackyourfuture.be
               </a>
             </li>
-            <li>
-              <a href='https://github.com/HackYourFutureBelgium/dom-manipulation/blob/master/examples-modifying-elements/README.md'
-                target='_blank'>
-                examples to study
-              </a>
             </li>
           </ul>
         </section>
