--- a/week-1/index.html
+++ b/week-1/index.html
@@ -501,6 +501,7 @@
       slideNumber: 'h/t',
       width: "100%",
       height: "100%",
+      hash: true,
       keyboard: {
         67: function () { RevealChalkboard.toggleNotesCanvas() },	// toggle notes canvas when 'c' is pressed
         66: function () { RevealChalkboard.toggleChalkboard() },	// toggle chalkboard when 'b' is pressed
