--- a/week-3/index.html
+++ b/week-3/index.html
@@ -344,8 +344,8 @@
         </section>
         <section>
           <h2>
-            <a href='https://github.com/HackYourFutureBelgium/configurable-button' target='_blank'>
-              Configurable Button Starter Repo
+            <a href='https://github.com/HackYourFutureBelgium/repetitive-list' target='_blank'>
+              Repetitive List Starter Repo
             </a>
           </h2>
         </section>
